init branch (Namespace changes)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,18 +7,8 @@ import(dplyr)
 import(ggplot2)
 import(patchwork)
 import(rlang)
+import(vdiffr)
 importFrom(assertthat,assert_that)
-importFrom(dplyr,all_equal)
-importFrom(dplyr,distinct)
-importFrom(dplyr,filter)
-importFrom(dplyr,group_by)
-importFrom(dplyr,if_else)
-importFrom(dplyr,left_join)
-importFrom(dplyr,mutate)
-importFrom(dplyr,n_distinct)
-importFrom(dplyr,rename)
-importFrom(dplyr,select)
-importFrom(dplyr,summarise)
 importFrom(glue,glue)
 importFrom(here,here)
 importFrom(magrittr,"%>%")
