--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,15 @@
 
 export("%>%")
 export(plot_forest)
-import(data.table)
 import(dplyr)
 import(ggplot2)
 import(patchwork)
 import(rlang)
 import(vdiffr)
 importFrom(assertthat,assert_that)
+importFrom(ggpubr,as_ggplot)
 importFrom(glue,glue)
+importFrom(gridExtra,arrangeGrob)
 importFrom(here,here)
 importFrom(magrittr,"%>%")
 importFrom(pmtables,sig)
