--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,3 +20,5 @@ importFrom(stringr,str_detect)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(utils,write.csv)
+importFrom(yspec,ys_get_short)
+importFrom(yspec,ys_load)
