--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,12 +19,16 @@ Imports:
     tibble,
     ggplot2,
     readr,
-    data.table,
     pmtables,
-    vdiffr
+    vdiffr,
+    gridExtra,
+    ggpubr,
+    yspec
 Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Depends:
+    R (>= 3.5.0)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
