--- a/pkgr.yml
+++ b/pkgr.yml
@@ -1,34 +1,15 @@
 Version: 1
 
+Descriptions:
+ - DESCRIPTION
+
 Packages:
-  - dplyr
-  - testthat
-  - glue
-  - pmtables
-  - yspec
-  - ggplot2
-  - patchwork
-  - readr
-  - stringr
-  - magrittr
-  - assertthat
-  - here
-  - vdiffr
   - devtools
-  - markdown
-  - gridExtra
-  - ggpubr
   - shiny
   - diffviewer
 
-
 Repos:
   - MPN: https://mpn.metworx.com/snapshots/stable/2021-11-19
-
-Customizations:
-  Packages:
-  - mgrsolve:
-      Suggests: true
 
 Lockfile:
     Type: renv
