refactor: assorted changes from group scientific review of 2022-02-04.
* added documentation of input and output data for summarize_data()
* changed CI arg to probs (and changed default to 90%)
* added geo_mean option for statistic
* added rep_probs and rep_statistic for controlling small lines
* changed from rounding in table to using pmtables::sig

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,15 @@ Description: Create forest plots
 Authors@R:
     c(person(given = "Kyle", family = "Barrett",
              role = c("aut", "cre"),
-             email = "barrettk@metrumrg.com"))
+             email = "barrettk@metrumrg.com"),
+    person(given = "Seth",
+             family = "Green",
+             role = c("aut"),
+             email = "sethg@metrumrg.com"),
+      person(given = "Anna-Christina",
+             family = "Nevison",
+             role = "aut",
+             email = "annanev@umich.edu"))
 License: MIT + file LICENSE
 Imports:
     assertthat,
@@ -17,6 +25,7 @@ Imports:
     here,
     magrittr,
     patchwork,
+    pmtables,
     readr,
     rlang,
     stringr,
