chore: running devtools::document() after final refactor edits from PR #5

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ importFrom(glue,glue)
 importFrom(gridExtra,arrangeGrob)
 importFrom(here,here)
 importFrom(magrittr,"%>%")
+importFrom(pmtables,sig)
 importFrom(readr,read_csv)
 importFrom(readr,read_table)
 importFrom(stringr,str_detect)
