--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,10 @@ importFrom(magrittr,"%>%")
 importFrom(pmtables,sig)
 importFrom(readr,read_csv)
 importFrom(readr,read_table)
+importFrom(stats,median)
+importFrom(stats,quantile)
 importFrom(stringr,str_detect)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
+importFrom(utils,globalVariables)
 importFrom(utils,write.csv)
