--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ import(dplyr)
 import(ggplot2)
 import(patchwork)
 import(rlang)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(assertthat,assert_that)
 importFrom(ggpubr,as_ggplot)
 importFrom(glue,glue)
@@ -14,6 +15,8 @@ importFrom(gridExtra,arrangeGrob)
 importFrom(here,here)
 importFrom(magrittr,"%>%")
 importFrom(pmtables,sig)
+importFrom(purrr,flatten)
+importFrom(purrr,map)
 importFrom(readr,read_csv)
 importFrom(readr,read_table)
 importFrom(stats,median)
