--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -2,3 +2,13 @@
 ^renv\.lock$
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^LICENSE\.md$
+^.drone.yml$
+^.drone.jsonnet$
+^README\.Rmd$
+^_pkgdown\.yml$
+^docs$
+^pkgdown$
+^codecov\.yml$
+^pkgr\.yml$
+^data-raw$
