refactor: trading out ggpubr for cowplot because ggpubr pulls in nloptr, which has a system dep issue on Metworx.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,10 +17,10 @@ Authors@R:
 License: MIT + file LICENSE
 Imports:
     assertthat,
+    cowplot,
     dplyr,
     glue,
     ggplot2,
-    ggpubr,
     gridExtra,
     here,
     magrittr,
