--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,10 @@ import(patchwork)
 import(rlang)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(assertthat,assert_that)
-importFrom(ggpubr,as_ggplot)
+importFrom(cowplot,draw_grob)
+importFrom(cowplot,ggdraw)
 importFrom(glue,glue)
+importFrom(grid,grobTree)
 importFrom(gridExtra,arrangeGrob)
 importFrom(here,here)
 importFrom(magrittr,"%>%")
