--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,6 +33,8 @@ Imports:
     stringr,
     tibble
 Suggests:
+    devtools,
+    knitr,
     testthat (>= 3.0.0),
     vdiffr,
     yspec
@@ -42,6 +44,7 @@ Depends:
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+VignetteBuilder: knitr
 Collate: 
     'classicforest.R'
     'table-plot.R'
