--- a/.drone.yml
+++ b/.drone.yml
@@ -21,7 +21,7 @@ steps:
   pull: never
   image: 906087756158.dkr.ecr.us-east-1.amazonaws.com/r-dev-ci-mpn-4.1:cran-latest
   commands:
-  - R -s -e 'devtools::install_deps(upgrade = '"'"'always'"'"')'
+  - R -s -e 'devtools::install_deps(upgrade = '"'"'always'"'"', dependencies = TRUE)'
   - R -s -e 'devtools::load_all(); sessioninfo::session_info()'
   - R -s -e 'devtools::test()'
   - R -s -e 'devtools::check(env_vars = c("NOT_CRAN" = "true"))'
@@ -69,7 +69,7 @@ steps:
   - git config --global user.email drone@metrumrg.com
   - git config --global user.name Drony
   - git fetch --tags
-  - R -s -e 'devtools::install_deps(upgrade = '"'"'always'"'"')'
+  - R -s -e 'devtools::install_deps(upgrade = '"'"'always'"'"', dependencies = TRUE)'
   - R -s -e 'pkgpub::create_tagged_repo(.dir = '"'"'/ephemeral'"'"')'
   volumes:
   - name: cache
@@ -112,4 +112,3 @@ trigger:
 
 depends_on:
 - cran-latest
-
