CI_label now supports up to 3 rows. It will error out if you try to pass 4 or more (was necessary to avoid too much refactoring)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,6 +53,7 @@ Collate:
     'table-plot.R'
     'forest-constructor.R'
     'AAAA.R'
+    'format-table-spacing.R'
     'helpers-for-tests.R'
     'plot-forest.R'
     'summarize-data.R'
