alignment is now fixed BUT  - now multi-lined table headers now dont work  - table header is now made with ggtitle instead of geom_text(). Ran into issues with the lines overlapping, or not being able to use the atop() function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,9 +53,9 @@ Collate:
     'table-plot.R'
     'forest-constructor.R'
     'AAAA.R'
-    'format-table-spacing.R'
     'helpers-for-tests.R'
     'plot-forest.R'
     'summarize-data.R'
+    'table-plot-new-wip.R'
     'utils-null.R'
     'utils-pipe.R'
