--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(gridExtra,arrangeGrob)
 importFrom(here,here)
 importFrom(magrittr,"%>%")
 importFrom(patchwork,plot_annotation)
+importFrom(patchwork,plot_layout)
 importFrom(patchwork,wrap_plots)
 importFrom(pmtables,sig)
 importFrom(purrr,flatten)
