tests: analysis3.yml: fix BLQ value
yspec 0.5.2 now errors for miscoded values.  From its NEWS:

    ys_load() will now detect if values / decode are mis-coded as a
    list of lists; all items in values and decode must be atomic

This leads to two pmforest test failures with errors like this:

    Error (test-base-plot.R:6:1): (code run outside of `test_that()`)
    Error: invalid column data
    In file: analysis3.yml
     column: BLQ
       - values field includes non-atomic data ...
       - yaml code possibly used brackets [ ] when braces { } were
       intended

    [...]
     7. yspec:::.stop("invalid ", context, " data\n", file, "\n", err)
          at yspec/R/load_spec.R:139:2

Adjust the BLQ value to have the correct coding (see
<https://github.com/metrumresearchgroup/yspec/pull/108>).

--- a/inst/test-data/spec/analysis3.yml
+++ b/inst/test-data/spec/analysis3.yml
@@ -70,9 +70,7 @@ LDOS:
 MDV:
 BLQ:
   short: below limit of quantification
-  values: 
-    - above QL: 1
-    - below Q: 0
+  values: {above QL: 1, below Q: 0}
 PHASE: 
   short: study phase indicator
   values: 1
