--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ Authors@R:
              role = "aut",
              email = "annanev@umich.edu"))
 License: MIT + file LICENSE
+URL: https://metrumresearchgroup.github.io/pmforest, https://github.com/metrumresearchgroup/pmforest
+BugReports: https://github.com/metrumresearchgroup/pmforest/issues
 Imports:
     assertthat,
     dplyr,
