--- a/pkgr.yml
+++ b/pkgr.yml
@@ -11,7 +11,7 @@ Packages:
 
 Repos:
   - CRAN: https://cran.rstudio.com # used for most things
-  - MPN: https://mpn.metworx.com/snapshots/stable/2023-08-24 # used for specific Metrum packages (such as pmtables & yspec)
+  - MPN: https://mpn.metworx.com/snapshots/stable/2024-06-12
 
 Lockfile:
     Type: renv
